--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -861,7 +861,7 @@ ul.table-of-contents li:not(.logo) a:hover span {
   ul#slide-out li:not(.logo) > a {
     display: flex !important;
     align-items: center !important;
-    gap: 12px !important;
+    gap: 18px !important;
     padding: 15px 20px !important;
     color: #333 !important;
   }
@@ -1250,7 +1250,7 @@ ul.side-nav.fixed li:not(.logo) > a,
 ul#nav-mobile li:not(.logo) > a {
   display: flex !important;
   align-items: center !important;
-  gap: 18px !important;
+  gap: 22px !important;
   padding: 12px 20px !important;
   min-height: 48px !important;
   line-height: 1.4 !important;
@@ -1315,7 +1315,7 @@ ul.side-nav.fixed li:not(.logo) > a,
 ul#nav-mobile li:not(.logo) > a {
   display: flex !important;
   align-items: center !important;
-  gap: 18px !important;
+  gap: 22px !important;
   padding: 12px 20px !important;
   min-height: 48px !important;
   width: 100% !important;
@@ -1329,7 +1329,7 @@ ul.side-nav.fixed li:not(.logo) > a span,
 ul#nav-mobile li:not(.logo) > a span {
   font-size: 16px !important;           /* up from 14px */
   font-weight: 400 !important;
-  line-height: 1.2 !important;
+  line-height: 22px !important;
 }
 
 /* Icon sizing you liked */
